# julekalender2021

./: README.md
1/: solve.py
2/: cities.csv  go.mod  knowit.go  main.go
3/aoc/: Program.cs  aoc.sln
3/knowit/: CMakeLists.txt  main.cpp
4/: CHANGELOG.md  knowit.hs  x4.cabal
4/app/: Main.hs
4/src/: MyLib.hs
5/: build.gradle.kts
5/src/main/kotlin/: Main.kt
6/: Main.hs  Main2.hs
7/: Main.hs
8/: solve.py
9/: Heatmap.cs  aoc.sln
9/aoc/: Heatmap.cs  Program.cs
rs/: Cargo.toml
rs/src/: main.rs
